--- a/src/styles.scss
+++ b/src/styles.scss
@@ -194,83 +194,6 @@ form {
   display: grid;
 }
 
-/* Card Component */
-
-/* .card-wrapper {
-  width: 100vw;
-  padding: 1rem;
-}
-
-.card {
-  padding: 1rem;
-  background-color: $color-light;
-  transition: .5s;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center; 
-  height: 25rem;
-  
-  p {
-    word-break: break-word;
-    hyphens: auto;
-    overflow-y: auto;
-  }
-
-  header {
-    color: $color-medium-dark;
-    display: flex;
-    justify-content: flex-end;
-    align-items: baseline;
-    position: relative;
-    width: 100%;
-    padding: 1rem 2rem;
-
-    div {
-      position: absolute;
-      top: 0;
-      right: 0;
-    }
-  }
-
-  footer {
-    position: relative;
-    width: 100%;
-    height: 5rem;
-  }
-
-  .curl {
-    width:4rem;
-    height:4rem;
-    position: absolute;
-    right: -1rem;
-    bottom: -1rem;
-    display: grid;
-    place-content: center;
-    background : 
-      linear-gradient(
-        135deg, 
-        $color-off-light, 
-        $color-off-light 50%, 
-        #ddd 50%, 
-        $color-medium 55%,
-      );
-
-    .icon {
-      color: $color-medium-dark;
-      transition: .3s;
-    }
-
-    &:hover {
-      .icon {
-        color: $color-primary;
-      }
-    }
-  }
-}
- */
-/* End Card Component */
-
 /* DeckList Component */
 
 .deck-list {
@@ -311,6 +234,11 @@ form {
         background-color: $color-primary;
         border: 2px solid $color-primary;
       }
+    }
+
+    .buttons {
+      display: flex;
+      gap: 1rem;
     }
 
     &:hover {
@@ -373,6 +301,7 @@ form {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin: 0;
 
   .logo {
     color: $color-primary;
@@ -480,8 +409,24 @@ form {
   } */
 }
 
+header {
+  color: $color-medium-dark;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  width: 100%;
+  margin-bottom: 1rem;
 
+  &:first-child {
+    font-weight: bold;
+    color: $color-medium-dark;
+  }
 
+  &:last-child {
+    /* */
+  }
+}
 
 .flippable {
   background-color: transparent;
@@ -525,25 +470,6 @@ form {
     word-break: break-word;
     hyphens: auto;
     overflow-y: auto;
-  }
-
-  header {
-    color: $color-medium-dark;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
-    width: 100%;
-    margin-bottom: 1rem;
-
-    &:first-child {
-      font-weight: bold;
-      color: $color-medium-dark;
-    }
-
-    &:last-child {
-      /* */
-    }
   }
 
   footer {
