--- a/src/styles.css
+++ b/src/styles.css
@@ -27,7 +27,8 @@ path, svg {
 }
 
 h1 {
-  font-weight: 900;
+  color: dodgerblue;
+  font-weight: 700;
   font-size: 1.5rem;
   line-height: 2.5rem;
 }
@@ -58,20 +59,26 @@ button.btn-icon, a.btn-icon {
 }
 
 button.btn-icon:hover, a.btn-icon:hover {
-  color: black;
+  color: dodgerblue;
+}
+
+button.btn-x, a.btn-x {
+  margin-left: 1rem;
+}
+
+button.btn-x:hover, a.btn-x:hover {
+  color: dodgerblue;
 }
 
 button.btn-primary, a.btn-primary {
   padding: 1rem;
-  background-color: black;
   border-radius: 0.5rem;
   color: white;
   font-weight: bold;
   width: 100%;
-}
-
-button.btn-primary:hover, a.btn-primary:hover {
-  background-color: #666;
+  margin: .5rem 0;
+  text-align: center;
+  background-color: dodgerblue;
 }
 
 button.btn-primary:disabled, a.btn-primary:disabled {
@@ -79,14 +86,68 @@ button.btn-primary:disabled, a.btn-primary:disabled {
   background-color: #999;
 }
 
+button.btn-primary:hover, a.btn-primary:hover {
+  background-color: #666;
+}
+
 button.btn-secondary, a.btn-secondary {
-  color: #999;
-  width: 100%;
   padding: 1rem;
+  border-radius: 0.5rem;
+  color: white;
+  font-weight: bold;
+  width: 100%;
+  margin: .5rem 0;
+  text-align: center;
+  background-color: #33e067;
+}
+
+button.btn-secondary:disabled, a.btn-secondary:disabled {
+  color: #eee;
+  background-color: #999;
 }
 
 button.btn-secondary:hover, a.btn-secondary:hover {
-  color: red;
+  background-color: #beffe9;
+}
+
+button.btn-tertiary, a.btn-tertiary {
+  padding: 1rem;
+  border-radius: 0.5rem;
+  color: white;
+  font-weight: bold;
+  width: 100%;
+  margin: .5rem 0;
+  text-align: center;
+  background-color: #ccc;
+}
+
+button.btn-tertiary:disabled, a.btn-tertiary:disabled {
+  color: #eee;
+  background-color: #999;
+}
+
+button.btn-tertiary:hover, a.btn-tertiary:hover {
+  background-color: #eee;
+}
+
+button.btn-warning, a.btn-warning {
+  padding: 1rem;
+  border-radius: 0.5rem;
+  color: white;
+  font-weight: bold;
+  width: 100%;
+  margin: .5rem 0;
+  text-align: center;
+  background-color: #ff1e56;
+}
+
+button.btn-warning:disabled, a.btn-warning:disabled {
+  color: #eee;
+  background-color: #999;
+}
+
+button.btn-warning:hover, a.btn-warning:hover {
+  background-color: #fa547d;
 }
 
 button.btn-save, a.btn-save {
@@ -94,7 +155,7 @@ button.btn-save, a.btn-save {
   bottom: 1rem;
   padding: 1rem;
   color: white;
-  background-color: black;
+  background-color: dodgerblue;
   border-radius: 0.5rem;
   width: 100%;
 }
@@ -103,17 +164,18 @@ button.btn-save:hover, a.btn-save:hover {
   background-color: #666;
 }
 
-button.btn-x, a.btn-x {
-  margin-left: 1rem;
-}
-
-button.btn-x:hover, a.btn-x:hover {
-  color: black;
+button.link, a.link {
+  padding: 1rem 0;
+  border-bottom: 1px solid #eee;
+  display: block;
 }
 
 a {
   text-decoration: none;
-  text-align: center;
+}
+
+.sample-list {
+  margin-top: 3rem;
 }
 
 /* End Buttons */
@@ -125,7 +187,7 @@ textarea {
   border: 1px solid #eee;
   font-size: 1rem;
   margin-bottom: 1rem;
-  background-color: #f9f9f9;
+  background-color: white;
 }
 
 textarea {
@@ -171,15 +233,27 @@ form#new-deck input[type=text] {
   border-bottom-right-radius: 0;
   border-right: 0;
   min-width: 0;
+  border-color: #eee;
+  outline: none;
+  -webkit-transition: .3s;
+  transition: .3s;
+}
+
+form#new-deck input[type=text]:focus {
+  border-color: dodgerblue;
+}
+
+form#new-deck input[type=text]:focus + button {
+  border-color: dodgerblue;
 }
 
 form#new-deck button {
   border-radius: 0.5rem;
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
-  background-color: #f9f9f9;
+  background-color: white;
   border: 0;
-  color: black;
+  color: dodgerblue;
   border: 1px solid #eee;
   border-left: 0;
   width: 3rem;
@@ -188,7 +262,7 @@ form#new-deck button {
 }
 
 form#new-deck button:hover {
-  background-color: black;
+  background-color: dodgerblue;
   color: white;
 }
 
@@ -196,6 +270,10 @@ form .buttons {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 form.mini {
@@ -224,6 +302,10 @@ form.mini input {
   height: 100%;
   display: -ms-grid;
   display: grid;
+}
+
+.container.center {
+  place-content: center;
 }
 
 /* DeckList Component */
@@ -272,8 +354,8 @@ input[type=checkbox] + label span:after {
 }
 
 input[type=checkbox]:checked + label span {
-  background-color: black;
-  border: 2px solid black;
+  background-color: dodgerblue;
+  border: 2px solid dodgerblue;
 }
 
 .deck-list {
@@ -296,6 +378,8 @@ input[type=checkbox]:checked + label span {
   -webkit-transition: .2s;
   transition: .2s;
   border: 1px solid transparent;
+  background-color: #f9f9f9;
+  border-color: #eee;
 }
 
 .deck-list li label {
@@ -310,35 +394,14 @@ input[type=checkbox]:checked + label span {
   gap: 1rem;
 }
 
-.deck-list li:hover {
-  background-color: #eee;
-}
-
 .deck-list li.selected {
-  background-color: #f9f9f9;
-  border-color: #eee;
-}
-
-.deck-list li.selected label {
-  color: black;
-}
-
-.deck-list li.selected:hover {
-  background-color: #eee;
+  border-color: dodgerblue;
 }
 
 /* End DeckList Component */
 /* Loader Component */
-.loader {
-  width: 100%;
-  height: 100%;
-  display: -ms-grid;
-  display: grid;
-  place-content: center;
-}
-
-.loader .loader-icon {
-  color: black;
+.spinner {
+  color: dodgerblue;
   -webkit-animation: spin 1s linear infinite;
           animation: spin 1s linear infinite;
 }
@@ -368,13 +431,18 @@ input[type=checkbox]:checked + label span {
 /* End Loader Component */
 /* Nav Component */
 .navbar {
-  padding: 1rem 2rem;
-  border-bottom: 1px solid #eee;
   width: 100%;
+  border-bottom: 1px solid #eee;
+  padding: 1rem;
   background-color: white;
   -webkit-box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.05);
           box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.05);
   z-index: 999;
+}
+
+.nav-inner {
+  padding: 0 1rem;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -384,14 +452,19 @@ input[type=checkbox]:checked + label span {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 0;
+  margin: auto;
+  max-width: 60ch;
 }
 
-.navbar .logo {
-  color: black;
+.nav-inner .logo {
+  color: dodgerblue;
   text-decoration: none;
   font-weight: 900;
   font-size: 1.2rem;
+}
+
+.nav-inner nav {
+  display: none;
 }
 
 /* End Nav Component */
@@ -425,14 +498,6 @@ input[type=checkbox]:checked + label span {
 
 .mobile-menu ul li {
   list-style-type: none;
-  padding: 1rem;
-  border-bottom: 2px solid #eee;
-  cursor: pointer;
-}
-
-.mobile-menu ul li a {
-  display: block;
-  text-align: left;
 }
 
 .mobile-menu.open {
@@ -484,7 +549,7 @@ input[type=checkbox]:checked + label span {
 }
 
 .carousel button.btn-carousel:hover {
-  color: black;
+  color: dodgerblue;
   background-color: white;
 }
 
@@ -553,7 +618,7 @@ header.hero {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  color: black;
+  color: dodgerblue;
   height: 30vh;
 }
 
@@ -678,7 +743,7 @@ header.hero {
 }
 
 .flippable .curl:hover .icon {
-  color: black;
+  color: dodgerblue;
 }
 
 .landing {
@@ -694,6 +759,9 @@ header.hero {
       -ms-flex-pack: center;
           justify-content: center;
   padding: 2rem;
+  width: 100%;
+  max-width: 60ch;
+  margin: auto;
 }
 
 .landing h1 {
@@ -703,12 +771,36 @@ header.hero {
 
 .dashboard {
   padding: 2rem;
+  width: 100%;
+  max-width: 60ch;
+  margin: auto;
 }
 
 /* Media Queries */
 @media only screen and (min-width: 768px) {
   .card-wrapper {
     width: 50vw;
+  }
+  .navbar .nav-inner .small-screen-only {
+    display: none;
+  }
+  .navbar .nav-inner nav {
+    display: block;
+  }
+  .navbar .nav-inner nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .navbar .nav-inner nav ul li {
+    padding: 0rem 1rem;
+  }
+  .navbar .nav-inner nav ul li a {
+    border: 0;
+    padding: 0;
   }
   .carousel button.btn-carousel {
     top: 50%;
@@ -729,8 +821,12 @@ header.hero {
   .flippable__inner {
     height: 25rem;
   }
-  .sidebar {
-    padding: 5rem 10rem;
+  form .buttons {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    gap: 1rem;
   }
 }
 
@@ -745,12 +841,6 @@ header.hero {
   .card .curl {
     right: -5rem;
     bottom: -4rem;
-  }
-  .sidebar {
-    position: relative;
-    width: 30rem;
-    margin-left: -30rem;
-    padding: 1rem 1rem;
   }
 }
 /*# sourceMappingURL=styles.css.map */
